--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,25 @@
+.header {
+    height: 50px;
+    background: rgb(53, 61, 71);
+
+    display: flex;
+    justify-content: space-between;
+  }
+  .header img {
+    height: 30px;
+    margin: 10px;
+  }
+.input-box {
+    padding: 15px;
+    color: white;
+}
+label {
+margin-left: 20px;
+margin-right: 5px;
+}
+
+
+
 main {
     padding: 30px;
     background: rgb(40, 49, 61);
@@ -20,7 +42,7 @@ main {
     color: white;
     text-align: center; 
 }
-img {
+.disk-box img {
     width: 110px;
     height: 110px;
     object-fit: cover;
